# rag-bancolombia

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: config.py  factories.py
src/app/graph/: build.py  nodes.py  state.py
src/app/ingest/: chunker.py  cleaner.py  crawler.py  scraper.py
src/app/rag/: embeddings.py  vectorstore.py
src/app/ui/: gradio_app.py
src/scripts/: run_ingest.py
